Added Source code

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,16 +2,6 @@ body {
   background: rgb(226, 251, 255, 0.4);
   font-family: "Patrick Hand", cursive;
 }
-.search-section {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  padding: 20px 0px;
-  border-bottom: 1px;
-  border-bottom-color: rgb(17, 63, 103, 0.3);
-  border-bottom-style: solid;
-}
-
 ul {
   list-style-type: none;
   font-size: 17px;
@@ -20,6 +10,15 @@ ul {
 img {
   display: block;
   margin: 0 auto;
+}
+.search-section {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  padding: 20px 0px;
+  border-bottom: 1px;
+  border-bottom-color: rgb(17, 63, 103, 0.3);
+  border-bottom-style: solid;
 }
 .city-input {
   color: rgb(17, 63, 103);
@@ -68,6 +67,12 @@ img {
   width: 50px;
 }
 .footer {
+  padding: 5px 20px;
   font-size: 12px;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-left: 140px;
+  margin-right: 50px;
+}
+a:link {
+  text-decoration: none;
 }
